--- a/src/pages/HotelsMap.css
+++ b/src/pages/HotelsMap.css
@@ -1,6 +1,6 @@
-.container {
+/* .container {
     display: flex;
     align-items: center;
     justify-content: center;
     padding-left: 20px;
- }
+} */
